[package]
name = "s3upload_example"
version = "0.1.0"
authors = ["Ian O'Connell <ianoc@ianoc.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bytes = "1.0.1"
tokio = {version = "1.7.0", features = ["full"]}
rusoto_s3 = "0.46.0"
futures = "0.3.15"
rusoto_core = "0.46.0"
rand = "0.8.4"
clap = "3.0.0-beta.2"
